# DualArm_Sim

./: README.md
DualArm/dualarm_control/: CMakeLists.txt  package.xml
DualArm/dualarm_control/config/: closedloopik_control.yaml  computedtorque_control_clik.yaml  config.rviz  impedance_control.yaml  jointspace_control.yaml  taskspace_control.yaml  taskspace_control_cy.yaml
DualArm/dualarm_control/launch/: closedloopik_control.launch  computedtorque_control_clik.launch  impedance_control.launch  jointspace_control.launch  taskspace_control.launch  taskspace_control_cy.launch
DualArm/dualarm_description/: CMakeLists.txt  ground.urdf  package.xml
DualArm/dualarm_description/meshes/collision/: allegro.dae
DualArm/dualarm_description/meshes/dualarm/: link6.STL
DualArm/dualarm_description/meshes/dualarm1/: Allegro_wrist.STL  allegro_hand.STL  link8.STL
DualArm/dualarm_description/meshes/stl/: allegro_ft.STL  l7.STL  r7.STL  wrist_ft_R.STL
DualArm/dualarm_description/urdf/: dual_arm.gazebo  dual_arm.gazebo.xacro  dual_arm.gv  dual_arm.urdf  dual_arm.xacro  dual_arm1.xacro  dual_arm_ft.xacro  dualarm.gv  link_to_joint.xacro  robot_parameter.xacro
DualArm/dualarm_gazebo/: CMakeLists.txt  package.xml
DualArm/dualarm_gazebo/launch/: box.sdf  dualarm_empty_world.launch  dualarm_empty_world_ft.launch
DualArm/dualarm_launch/: CMakeLists.txt  package.xml
DualArm/dualarm_launch/launch/: dualarm_closedloopik_control.launch  dualarm_computedtorque_control_clik.launch  dualarm_impedance_control.launch  dualarm_jointspace_control.launch  dualarm_taskspace_control.launch  dualarm_taskspace_control_cy.launch
dualarm_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
dualarm_controller/Control/: CMakeLists.txt  Controller.cpp  Controller.h  KistHand.cpp  KistHand.h  Motion.cpp  Motion.h  Trajectory.cpp  Trajectory.h  slerp.cpp  slerp.h  slerpHandler.cpp  slerpHandler.h
dualarm_controller/KDL/: CMakeLists.txt  LieDynamics.cpp  LieDynamics.h  LieOperator.cpp  LieOperator.h  PoEKinematics.cpp  PoEKinematics.h  PropertyDefinition.cpp  PropertyDefinition.h  SerialManipulator.cpp  SerialManipulator.h  motionlibrary.h
dualarm_controller/Utils/: CMakeLists.txt  ellipsoid.cpp  similarity.cpp  similarity.h
dualarm_controller/include/: Controller.cpp  Controller.h  LieDynamics.cpp  LieDynamics.h  LieOperator.cpp  LieOperator.h  PoEKinematics.cpp  PoEKinematics.h  PropertyDefinition.cpp  PropertyDefinition.h  SerialManipulator.cpp  SerialManipulator.h  Trajectory.cpp
dualarm_controller/msg/: CLIKCurrentState.msg  ControllerJointState.msg  JointCurrentState.msg  JointDesiredState.msg  TaskCurrentState.msg  TaskDesiredState.msg
dualarm_controller/src/: closedloopik_control.cpp  computedtorque_control_clik.cpp  dualarm_controller.cpp  impedance_control.cpp  jointspace_control.cpp  taskspace_control.cpp  taskspace_control_cy.cpp
